getxattr takes 6 parameters in macOS

Summary:
Fix the xattr failure on macOS.

BUG: 393304
FIXED-IN: 5.46

Reviewers: ngraham

Reviewed By: ngraham

Subscribers: #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D12365